--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
